# ParserOperators-D7012E-Lab2

./: ParserLab2.cabal  README.md
app/: Main.hs
src/: Expr.hs  Parser.hs  Program.hs  Statement.hs
test/: Spec.hs  TestExpr.hs  TestParser.hs  TestProgram.hs  TestStatement.hs
