name:               ParserLab2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/davidrutqvist/ParserOperators-D7012E-Lab2#readme
license:             BSD3
license-file:        LICENSE
author:              David Rutqvist
maintainer:          david@rutqvist.com
copyright:           2017 David Rutqvist
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CoreParser, Dictionary, Expr, Parser, Program, Statement
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable ParserLab2-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ParserLab2
  default-language:    Haskell2010

test-suite ParserLab2-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ParserLab2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/davidrutqvist/ParserOperators-D7012E-Lab2
